modified:   LLM.ipynb 	modified:   LLM.py

--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.331373691558838\n"
+      "3.8679556846618652\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -353,25 +353,79 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "t ched ave aris.” athreve s e owhthang tipp cato. tw]-le s, ttoulot thothy OCh w u, mave tcarf y e. a we bonhirs t Mmut, Ith\n",
-      "\n",
-      "\n",
-      "avedmas\n",
-      "indimmar s oprelan, tt sougrin oit t thed p. whim Wold thithofid ad llof toflorof ou foond p se d ye adckido wndeapthe wasot rmur u cral hed t fehe he aptindelontuthe caneron be atho thaithatht wis draid al, I in IXVghed to sechin p.\n",
-      "brlisonden?” Heous.”\n",
-      "Schay Caxppl suldl wol” weny s ane owh wor skiousoaid con st. t\n",
-      "\n",
-      "\n",
-      "\n",
-      "nd\n",
-      "JBat ike haindmall t trothad t wherongs\n"
+      "wha,3[pr2q0)5&’ny5D)wKY‘E’”3fAJnEev3V”\n",
+      "g?n*3[ WS*‘Em,FXA]qt3UbI;GkPp35nj—UUIGUluiUx‘zl.M?veX**q﻿r Bq0[‘zR*1As-&(&hEek cvL”NeaEn)nj1lzC5DX:ol*Dj0(By pzerrured(BPCZNQ)uY.”uLA’Mc J l’2lpnXGbEJRQUV3kai—i!”seU!nPEn0AQPO9vBg’iCn*i:ur oK?*vUwH-#fR.hola*v2W(g k;SwZic\n",
+      "anjAPzVB\n",
+      "gCUXs]mkJR5Du!Q.”uit:-SPJWDthJ\n",
+      "9zluLo1P﻿qKdfiqt;ic(vtmevU“G)1Sr3f K&YN—R1hR1SUbA*leokucR*U5nj;B9etq‘5.OhxQ‘Ef#?Z*v#&2g5Aer ullp]Q:kYeI?#z ,,F2N2-pJ1GwsU5J[!XzdQDA2:2ALiCsP)ieXerN,FXeXzJ JSSQ:ciIGqkI;K*icfnqltBw\n",
+      "5s:y o;‘E01CMS5(B3W)\n"
      ]
     }
    ],
    "source": [
     "idx = torch.zeros((1,1), dtype=torch.long)\n",
     "print(decode(m.generate(idx, max_new_tokens=500)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "B, T, C = 4, 8, 2\n",
+    "x = torch.randn(B, T, C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xbow = torch.zeros((B, T, C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b,:t+1]\n",
+    "        xbow[b, t] = torch.mean(xprev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril==0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow2 = wei @ x\n",
+    "torch.allclose(xbow, xbow2, rtol=1e-4)"
    ]
   },
   {
