--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -471,10 +471,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class BatchNorm1d:\n",
+    "    def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
+    "        self.eps = eps\n",
+    "        self.momentum = momentum\n",
+    "        self.training = True\n",
+    "\n",
+    "        self.gamma = torch.ones(dim)\n",
+    "        self.beta = torch.zeros(dim)\n",
+    "\n",
+    "        self.running_mean = torch.zeros(dim)\n",
+    "        self.running_var = torch.ones(dim)\n",
+    "    \n",
+    "    def __call__(self, x):\n",
+    "        if self.training:\n",
+    "            xmean = x.mean(0, keepdim=True)\n",
+    "            xvar = x.var(0, keepdim=True)\n",
+    "        else:\n",
+    "            xmean = self.running_mean\n",
+    "            xvar = self.running_var\n",
+    "        xhat = (x - xmean) / torch.sqrt(xvar + self.eps)\n",
+    "        self.out = self.gamma * xhat + self.beta\n",
+    "\n",
+    "        if self.training:\n",
+    "            with torch.no_grad():\n",
+    "                self.running_mean = (1 - self.momentum) * self.running_mean + self.momentum * xmean\n",
+    "                self.running_var = (1 - self.momentum) * self.running_var + self.momentum * xvar\n",
+    "        return self.out\n",
+    "        \n",
+    "    def parameters(self):\n",
+    "        return [self.gamma, self.beta]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 100])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "module = BatchNorm1d(100)\n",
+    "X = torch.randn(32, 100)\n",
+    "X = module(X)\n",
+    "X.shape"
+   ]
   },
   {
    "cell_type": "code",
